# ShareIT-Act

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING_MetadataFix_PR.md  Dockerfile  README.md  ReviewProcess.md  analyze_code_json.py  docker-compose.yml  generate_reviewHTML.py  main.py  pyproject.toml  requirements.txt  review.csv  review.html
.github/: CONTRIBUTING.md
.github/workflows/: create-code-json.yml  test.yml  update-github-orgs.yml
catalog/: code.json  exempted_log.csv
data/: code.json  privateid_mapping.csv
data/raw/: devops-ado-repos.json  devops2-ado-repos.json  repo-cdc-data.json  repo-cdc-his.json  repo-cdcai.json  repo-cdcent.json  repo-cdcepi.json  repo-cdcgov.json  repo-informaticslab.json  repo-niosh-mining.json
docs/: index.html  sources.md
docs/catalog/: code.json  code.schema.json
gitlab/: README.md  main.py
src/: codejson.py  combine.py  config.py  repository.py  sanitize.py
src/gitlab/: README.md  __init__.py  cli.py  client.py  config.py  main.py  repository.py  sanitize.py
test/: testconfig.py
