[project]
name = "shareit-act"
version = "1.0.0"
description = "To comply with H.R.9566 - SHARE IT Act and share open source code with other federal agencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygithub>=2.6.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "python-gitlab>=6.0.0",
    "pytz>=2025.2",
    "requests[socks]>=2.32.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
